chore: separate dto and models content
